--- a/.tbstore.yml
+++ b/.tbstore.yml
@@ -1,4 +1,4 @@
-module_name: Instamojo - Indian Payment Gateway
+module_name: Instamojo Indian Payment Gateway
 compatible_versions: 1.0.0+
 author: Gautam Garg
 category: payment
